# embedded-pipelines

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  LICENSE  README.md  build-docker.sh  docker-compose.yaml  embedded-pipelinesConfig.cmake.in  install_dependencies.sh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/images/: doc_figures.pptx
docs/src/: api.rst  core_components.rst  data_types.rst  information_model.rst  installation.rst  toc.rst  tutorials.rst
examples/: CMakeLists.txt  camera_pipeline.cpp  image_display.cpp  sim_sensor_pipeline.cpp  tutorial_01.cpp  tutorial_01.yml  tutorial_02.cpp  tutorial_02.yml  tutorial_03.cpp  tutorial_03.yml
examples/data/tif/: image_0.tiff  image_1.tiff  image_10.tiff  image_100.tiff  image_101.tiff  image_102.tiff  image_103.tiff  image_104.tiff  image_105.tiff  image_106.tiff  image_107.tiff  image_108.tiff  image_109.tiff  image_11.tiff  image_110.tiff  image_111.tiff  image_112.tiff  image_113.tiff  image_114.tiff  image_115.tiff  image_116.tiff  image_117.tiff  image_118.tiff  image_119.tiff  image_12.tiff  image_120.tiff  image_121.tiff  image_122.tiff  image_123.tiff  image_124.tiff  image_125.tiff  image_126.tiff  image_127.tiff  image_128.tiff  image_129.tiff  image_13.tiff  image_130.tiff  image_131.tiff  image_132.tiff  image_133.tiff  (+960 more)
examples/filters/: CMakeLists.txt  filter_template.cpp  filter_template.h  filter_template.yml  image_src.cpp  image_src.h  image_src.yml  sim_sdk_src.cpp  sim_sdk_src.h  sink_template.cpp  sink_template.h  sink_template.yml  src_template.cpp  src_template.h  src_template.yml
examples/libs/: sensor_sdk.cpp  sensor_sdk.h  test_sensor_sdk.cpp
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera.h
src/camera/filters/: arv_cam.cpp  arv_cam.h
src/camera/libs/: parse_genicam_xml.cpp  parse_genicam_xml.h
src/core/: CMakeLists.txt  core.h
src/core/filters/: file_sink.cpp  file_sink.h  file_src.cpp  file_src.h  gl_display.cpp  gl_display.h
src/core/libs/: ep_types.cpp  ep_types.h  filter.cpp  filter.h  image_object.cpp  image_object.h  image_utils.cpp  image_utils.h  message.cpp  message.h  node.cpp  node.h  node_tree.cpp  node_tree.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  queue_handlers.cpp  queue_handlers.h  serialization.cpp  serialization.h  settings.cpp  settings.h  settings_impl.cpp  settings_templates.cpp  signals.h
src/modbus/: CMakeLists.txt  modbus.h
src/modbus/filters/: modbus_client.cpp  modbus_client.h
src/opcua/: CMakeLists.txt  opcua.h
src/opcua/filters/: opcua_client.cpp  opcua_client.h  opcua_server.cpp  opcua_server.h  opcua_xml_server.cpp  opcua_xml_server.h
src/opcua/libs/: opcua_data.cpp  opcua_data.h
src/opcua/ua_schema_nodesets/I4AAS/: Opc.Ua.I4AAS.NodeIds.csv  Opc.Ua.I4AAS.NodeSet2.xml  Opc.Ua.I4AAS.Types.bsd
src/rtsp/: CMakeLists.txt  rtsp.h
src/rtsp/filters/: rtsp_sink.cpp  rtsp_sink.h
src/sockets/: CMakeLists.txt  sockets.h
src/sockets/filters/: socket_client.cpp  socket_client.h
tests/: CMakeLists.txt
tests/camera/: CMakeLists.txt  test_arv_cam.cpp
tests/core/: CMakeLists.txt  filter_settings.yml  test_display.cpp  test_filter.cpp  test_message.cpp  test_pipeline.cpp  test_queue.cpp  test_settings.cpp  test_signals.cpp  test_sink.cpp  test_src.cpp
tests/modbus/: CMakeLists.txt  test_modbus_client.cpp  test_random_server.cpp
tests/opcua/: CMakeLists.txt  config_opcua_client.yml  config_opcua_client.yml.bkp  config_opcua_server.yml  new_test_opcua_server.cpp  test_opcua_client.cpp  test_opcua_server.cpp
tests/opcua/xml2server/: config_opcua_xml2server.yml  example_atl_robot.xml  test_opcua_xml2server.cpp  test_opcua_xmlnodesetloader.cpp
tests/rtsp/: CMakeLists.txt  test_rtsp_sink_cam.cpp
tests/sockets/: CMakeLists.txt  fake_tcp_server.py  test_socket_client.cpp
